# rinici.de

./: .gitignore  Pages.hs  README.md  Server.hs  Site.hs  authors.yml  cabal.project.freeze  dune  fourmolu.yaml  go.mod  go.sum  main.go  mw.js  pandoc.yaml  rinicide.cabal  server.ml  template.eml.html  template.html  webrini.cabal  webrini.ml
pages/: buttons.md  colors.md  index.md
pages/buttons/: index.md
posts/: 2024-08-18-streaming-html.md  2024-11-07-streaming-html.md  2025-02-28-pandoc.md
public/: pgp.asc
public/buttons/: dvd.html  flappy.html  sand.html  snake.html
src/: Pages.hs  Server.hs  Site.hs
styles/: base.css  base.scss  blog.css  blog.scss  chat.scss  index.css  index.scss  partial.css
