cabal-version:  3.0
name:           rinicide
version:        0.1.0
license:        Apache-2.0
license-file:   LICENSE-APACHE
author:         rini
maintainer:     rini@rinici.de
build-type:     Simple

common base
  ghc-options:        -Wall -Wno-name-shadowing -haddock -threaded
  default-language:   Haskell2010
  build-depends:      base >=4.7 && <5

executable server
  import:             base
  main-is:            Server.hs
  hs-source-dirs:     src
  build-depends:
      warp            ^>= 3.4
    , wai             ^>= 3.2
    , wai-extra       ^>= 3.1
    , wai-app-static  ^>= 3.1
    , text            ^>= 2.0

executable site
  import:             base
  main-is:            Site.hs
  hs-source-dirs:     src
  build-depends:
      bytestring      ^>= 0.11
    , directory       ^>= 1.3
    , filepath        ^>= 1.4
    , temporary       ^>= 1.3
    , text            ^>= 2.0
    , time            ^>= 1.12
    , typed-process   ^>= 0.2
    , mtl             ^>= 2.2
