cabal-version:  3.0
name:           webrini
version:        0.1.0.0
license:        Apache-2.0
license-file:   LICENSE
author:         rini
maintainer:     rini@rinici.de
build-type:     Simple

common warnings
  ghc-options: -Wall -Wno-name-shadowing

executable server
  import:           warnings
  main-is:          Server.hs
  default-language: Haskell2010
  build-depends:
    base >=4.7 && <5,
    scotty ^>=0.22,
    blaze-html ^>= 0.9.2,
    wai,
    warp,
    http-types,
    text,
    binary
