cabal-version:  3.0
name:           webrini
version:        0.1.0.0
license:        Apache-2.0
license-file:   LICENSE
author:         rini
maintainer:     rini@rinici.de
build-type:     Simple

common base
  ghc-options: -Wall -Wno-name-shadowing -haddock
  default-language: Haskell2010
  build-depends: base >=4.7 && <5

executable server
  import:   base
  main-is:  Server.hs
  build-depends:
    scotty ^>=0.22,
    blaze-html ^>= 0.9.2,
    wai,
    wai-extra,
    wai-app-static,
    warp,
    http-types,
    text,
    binary,
    data-default,

executable site
  import:   base
  main-is:  Site.hs
  other-modules:
    Pages
  build-depends:
    blaze-html ^>= 0.9.2,
    typed-process,
    bytestring,
    text,
    process,
    directory,
    filepath,
    time,
    mtl,
