cabal-version:  3.0
name:           webrini
version:        0.1.0.0
license:        Apache-2.0
license-file:   LICENSE-APACHE
author:         rini
maintainer:     rini@rinici.de
build-type:     Simple

common base
  ghc-options: -Wall -Wno-name-shadowing -haddock -threaded
  default-language: Haskell2010
  build-depends: base >=4.7 && <5

executable server
  import:         base
  main-is:        Server.hs
  hs-source-dirs: src
  build-depends:
    blaze-html ^>= 0.9.2,
    base64-bytestring ^>= 1.2,
    binary ^>= 0.8,
    bytestring ^>= 0.11,
    clientsession ^>= 0.9.3,
    containers,
    data-default ^>= 0.7,
    http-types ^>= 0.12,
    mtl ^>= 2.2,
    random ^>= 1.2,
    scotty ^>=0.22,
    stm ^>= 2.5,
    text ^>= 2.0,
    time ^>= 1.12,
    wai ^>= 3.2,
    wai-app-static ^>= 3.1,
    wai-extra ^>= 3.1,
    warp ^>= 3.4,

executable site
  import:         base
  main-is:        Site.hs
  hs-source-dirs: src
  other-modules:
    Pages
  build-depends:
    blaze-html ^>= 0.9.2,
    bytestring ^>= 0.11,
    directory ^>= 1.3,
    filepath ^>= 1.4,
    mtl ^>= 2.2,
    temporary ^>= 1.3,
    text ^>= 2.0,
    time ^>= 1.12,
    typed-process ^>= 0.2,
